# Algorithoms-and-parallel-computing

./: README.md
Assignments/Assignment1/Assignment1_2024_initial_code/: main.cpp  power_iteration.cpp  power_iteration.h
Assignments/Assignment1/Assignment1_2024_proposed_solution/: inverse_power_iteration.cpp  main.cpp  power_iteration.cpp  shift_inverse_power_iteration.cpp  squarematrix.cpp
Assignments/Assignment2/Assignment2_initial/: convolutional_layer.cpp  tensor_3d.hpp
Assignments/Assignment2/Assignment2_solution/: convolutional_layer.cpp  fc_layer.cpp  main.cpp  max_pooling_layer.cpp
Assignments/Assignment3/assignment3_initial/: CMakeLists.txt
Assignments/Assignment3/assignment3_initial/input/: apps4.txt  devices4.txt
Assignments/Assignment3/assignment3_initial/output/: example4.txt
Assignments/Assignment3/assignment3_initial/src/: dense_matrix.hpp  logger.hpp  simulator.cpp
Exercises/Ex1/PriceDeviationClass/: CMakeLists.txt  main.cpp
Exercises/Ex10/solution/: CMakeLists.txt  Calendar.cpp  Calendar.h
Exercises/Ex12/KMeans-live/: CMakeLists.txt  Centroid.cpp  Centroid.h  Clustering.h
Exercises/Ex13/DataFrame/: DataFrame.cpp  DataFrame.h  main.cpp
Exercises/Ex13/DataFrame_Live/: CMakeLists.txt  DataFrame.cpp  DataFrame.h
Exercises/Ex13/DataFrame_initial/: DataFrame.cpp
Exercises/Ex15/TE23062020/: main.cc
Exercises/Ex16/MPI_ApproximatePi/: main_initial.cc
Exercises/Ex17/matrix_mul/: a.out  main.cpp  parall_mul
Exercises/Ex17/matrix_mul_initial/: main.cpp
Exercises/Ex18/exercise-mpi-initial/: dense_matrix.hpp
Exercises/Ex21/: overall_example_associative.cpp  overall_example_associative_initial.cpp
Exercises/Ex3/: Complex.cpp  Complex.h
Exercises/Ex7/RootFinderSolution/: Bisection.cpp  Bisection.hpp  CMakeLists.txt  Function.hpp  Newton.cpp  Newton.hpp  Robust.cpp  Robust.hpp  RootFinder.cpp  Roots2.cpp
Labs/Lab2/MinRn/: CMakeLists.txt  FunctionMinRn.cpp  FunctionMinRn.h  FunctionRn.cpp  Makefile
(+580 files in other folders)
